changes in the firstSelector and firstChildSelector file

--- a/Basics/firstSelector.html
+++ b/Basics/firstSelector.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Selector</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- :first Selector is used to select the first element of the specified type.  -->
     <script>
         $(document).ready(function(){
             $("h3:first").css("background-color","cyan");
@@ -13,7 +14,7 @@
 </head>
 <body>
     <center>First Selector</center>
-    <h3>here changes will not reflect</h3>
+    <h3>here changes will reflect</h3>
     <h3>here changes will not reflect</h3>
     <h3>here changes will not reflect</h3>
 </body>
